tests/spec/emit/snapshots/recursive_enum_tuple_ptr_temp_var_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  enum Node {
    Leaf(int),
    Branch(Node, Node),
  }
  
  fn main() {
    let n = Node.Branch(Node.Leaf(1), Node.Leaf(2))
    let ptr_1 = 3
    fmt.Println(n)
    fmt.Println(ptr_1)
  }
---
package main

import "fmt"

func MakeNodeLeaf(arg0 int) Node {
	return Node{Tag: NodeLeaf, Leaf: arg0}
}

func MakeNodeBranch(arg0 Node, arg1 Node) Node {
	return Node{Tag: NodeBranch, Branch0: &arg0, Branch1: &arg1}
}

type NodeTag uint8

const (
	NodeLeaf NodeTag = iota
	NodeBranch
)

type Node struct {
	Tag     NodeTag
	Leaf    int
	Branch0 *Node
	Branch1 *Node
}

func main() {
	n := MakeNodeBranch(MakeNodeLeaf(1), MakeNodeLeaf(2))
	ptr_1 := 3
	fmt.Println(n)
	fmt.Println(ptr_1)
}
