tests/spec/emit/snapshots/recursive_function.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn factorial(n: int) -> int {
    if n <= 1 {
      1
    } else {
      n * factorial(n - 1)
    }
  }
---
package main

func factorial(n int) int {
	if n <= 1 {
		return 1
	}
	return n * factorial(n-1)
}
