tests/spec/emit/snapshots/recursive_generic_enum_list.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum List<T> {
    Nil,
    Cons(T, List<T>)
  }
  
  fn test() -> List<int> {
    List.Cons(1, List.Cons(2, List.Nil))
  }
---
package main

func MakeListNil[T any]() List[T] {
	return List[T]{Tag: ListNil}
}

func MakeListCons[T any](arg0 T, arg1 List[T]) List[T] {
	return List[T]{Tag: ListCons, Cons0: arg0, Cons1: &arg1}
}

type ListTag uint8

const (
	ListNil ListTag = iota
	ListCons
)

type List[T any] struct {
	Tag   ListTag
	Cons0 T
	Cons1 *List[T]
}

func test() List[int] {
	return MakeListCons(1, MakeListCons(2, MakeListNil[int]()))
}
