tests/spec/emit/snapshots/recursive_generic_enum_payload_wrapped.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Cycle<T> {
    End,
    Next(Link<T>),
  }
  
  struct Link<T> {
    pub value: T,
    pub next: Cycle<T>,
  }
  
  fn total(c: Cycle<int>) -> int {
    match c {
      Cycle.End => 0,
      Cycle.Next(l) => l.value + total(l.next),
    }
  }
  
  fn test() -> int {
    total(Cycle.Next(Link { value: 5, next: Cycle.Next(Link { value: 6, next: Cycle.End }) }))
  }
---
package main

func MakeCycleEnd[T any]() Cycle[T] {
	return Cycle[T]{Tag: CycleEnd}
}

func MakeCycleNext[T any](arg0 Link[T]) Cycle[T] {
	return Cycle[T]{Tag: CycleNext, Next: &arg0}
}

type CycleTag uint8

const (
	CycleEnd CycleTag = iota
	CycleNext
)

type Cycle[T any] struct {
	Tag  CycleTag
	Next *Link[T]
}

type Link[T any] struct {
	Value T
	Next  Cycle[T]
}

func total(c Cycle[int]) int {
	if c.Tag == CycleEnd {
		return 0
	}
	l := *c.Next
	return l.Value + total(l.Next)
}

func test() int {
	return total(MakeCycleNext(Link[int]{
		Value: 5,
		Next: MakeCycleNext(Link[int]{
			Value: 6,
			Next:  MakeCycleEnd[int](),
		}),
	}))
}
