tests/spec/emit/snapshots/ref_bounded_generic_absorbs_ref_into_type_param.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Mutable {
    fn mutate(val: string)
  }
  
  struct Box {
    content: string,
  }
  
  impl Box {
    fn mutate(self: mut Ref<Box>, val: string) {
      self.content = val
    }
  }
  
  fn apply_mutation<T: Mutable>(item: mut Ref<T>, val: string) {
    item.mutate(val)
  }
  
  fn test() {
    let mut b = Box { content: "original" }
    apply_mutation(&b, "changed")
  }
---
package main

type Mutable interface {
	mutate(string)
}

type Box struct {
	content string
}

func (b *Box) mutate(val string) {
	b.content = val
}

func applyMutation[T Mutable](item T, val string) {
	item.mutate(val)
}

func test() {
	b := Box{content: "original"}
	applyMutation(&b, "changed")
}
